--- a/src/static/index.html
+++ b/src/static/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
+    <button class="theme-toggle" id="theme-toggle">🌓</button>
     <header>
       <h1>Mergington High School</h1>
       <h2>Extracurricular Activities</h2>
@@ -16,7 +17,7 @@
       <section id="activities-container">
         <h3>Available Activities</h3>
         <div id="activities-list">
-          <!-- Activities will be loaded here -->
+          <!-- Activities will be loaded here with unregister buttons -->
           <p>Loading activities...</p>
         </div>
       </section>
@@ -35,7 +36,7 @@
               <!-- Activity options will be loaded here -->
             </select>
           </div>
-          <button type="submit">Sign Up</button>
+          <button type="submit" class="signup-btn">Sign Up</button>
         </form>
         <div id="message" class="hidden"></div>
       </section>
